2007-07-29  Thatcher Ulrich <tu@tulrich.com>
	* gameswf/samples/test_delete_references.as
	* gameswf/samples/test_delete_references.swf
	* gameswf/tests/test_delete_references.txt
	Added a test to demonstrate that 'delete' operator is wrong -- it
	should only clear the reference; it should not clear the objects
	pointed to by the deleted reference.  Will fix in a subsequent
	change.

	* gameswf/gameswf_action.cpp: Fixed call_method opcode; method
	calls should work on functions.

	* gameswf/gameswf_function.h: Fixed memory bug with as_as_function
	-- m_properties cannot be of type as_object, it must be a pointer
	to as_object.  Otherwise, the as_object ref_counted destructor
	tries to delete itself, which is invalid.

	* base/Makefile: compile fix, add tu_loadlib.cpp

2007-07-29  Vitaly Alexeev <tishka92@yahoo.com>
	
	Continuation of struggle against memory leaks
	* gameswf/gameswf.h
	* gameswf/gameswf_action.cpp
	* gameswf/gameswf_button.cpp
	* gameswf/gameswf_character.h
	* gameswf/gameswf_environment.cpp
	* gameswf/gameswf_environment.h
	* gameswf/gameswf_impl.cpp
	* gameswf/gameswf_impl.h
	* gameswf/gameswf_object.cpp
	* gameswf/gameswf_object.h
	* gameswf/gameswf_root.cpp
	* gameswf/gameswf_root.h
	* gameswf/gameswf_sprite.cpp
	* gameswf/gameswf_sprite.h
	* gameswf/gameswf_test_ogl.cpp
	* gameswf/gameswf_text.cpp
	* gameswf/gameswf_text.h
	* gameswf/gameswf_value.cpp
	* gameswf/gameswf_video_impl.cpp
	* gameswf/gameswf_video_impl.h
	* gameswf/plugins/lib3ds/gameswf_3ds.cpp
	* gameswf/plugins/lib3ds/gameswf_3ds.h

2007-07-29  Vitaly Alexeev <tishka92@yahoo.com>
	
	a bit cleanup
	* gameswf/gameswf_object.cpp

2007-07-29  Vitaly Alexeev <tishka92@yahoo.com>
	
	getter/setter requires the target
	* gameswf/gameswf_object.cpp
	* gameswf/gameswf_value.cpp
	* gameswf/gameswf_value.h

2007-07-28  Vitaly Alexeev <tishka92@yahoo.com>
	
	* gameswf/gameswf_value.h: a bit cleanup

2007-07-28  Vitaly Alexeev <tishka92@yahoo.com>
	